# sarif-tools

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  run.py  setup.cfg  setup.py
.config/1espt/: PipelineAutobaseliningConfig.yml
.github/workflows/: build.yml  validation.yml
azure-pipelines/: build.yml  release.yml  sign.yml
azure-pipelines/templates/: build_stage.yml  globals.yml
sarif/: __init__.py  charts.py  issues_report.py  loader.py  sarif_file.py  sarif_file_utils.py  test_formatting.py  unformatted_test.py
sarif/cmdline/: main.py  main.py.orig
sarif/filter/: filter_stats.py  general_filter.py
sarif/operations/: blame_op.py  codeclimate_op.py  copy_op.py  csv_op.py  diff_op.py  emacs_op.py  html_op.py  info_op.py  summary_op.py  trend_op.py  upgrade_filter_op.py  word_op.py
sarif/operations/templates/: sarif_emacs.txt  sarif_summary.html
src/sarif/: __main__.py  charts.py  loader.py  sarif_file.py
src/sarif/cmdline/: main.py
src/sarif/operations/: blame_op.py  csv_op.py  diff_op.py  html_op.py  info_op.py  ls_op.py  summary_op.py  trend_op.py  word_op.py
src/sarif/operations/templates/: sarif_summary.html
tests/: test_blame_op.py  test_check_switch.py  test_copy_op.py  test_diff_op.py  test_general_filter.py  test_sarif_file_utils.py  test_version.py  utils.py
tests/diff/: test_diff_issues_reordered.py
tests/operations/: __init__.py  test_emacs_op.py
tests/ops/blame/: test_blame.py
tests/ops/codeclimate/: test_codeclimate.py
tests/ops/copy/: test_copy.py
tests/ops/csv/: test_csv.py
tests/ops/diff/: test_diff_issues_reordered.py
tests/ops/emacs/: test_emacs.py
tests/ops/html/: test_autotrim_bug.py  test_html.py
tests/ops/info/: test_info.py
tests/ops/ls/: test_ls.py
tests/ops/summary/: test_summary.py
tests/ops/trend/: test_trend.py
tests/ops/upgrade_filter/: test_upgrade_filter.py
tests/ops/version/: test_version.py
tests/ops/word/: test_word.py
