[tool.poetry]
name = "sarif-tools"
version = "3.0.4"
description = "SARIF tools"
authors = ["Microsoft"]
readme = "README.md"
homepage = "https://github.com/microsoft/sarif-tools"
packages = [
    { include = "sarif" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/microsoft/sarif-tools/issues"

[tool.poetry.dependencies]
jinja2 = "^3.1.4"
jsonpath-ng = "^1.6.0"
matplotlib = "^3.7"  # Need Python 3.9+ for newer
python = "^3.8"
python-docx = "^1.1.2"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
jsonschema = "^4.23.0"
pylint = "^3.2"
pytest = "^8.3"
pytest-cov = "^5.0"
ruff = "^0.6.8"

[tool.poetry.scripts]
sarif = "sarif.cmdline.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
