[metadata]
name = sarif-tools
version = 0.1.0
author = Microsoft
description = SARIF tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/microsoft/sarif-tools
project_urls =
    Bug Tracker = https://github.com/microsoft/sarif-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >= 3.9
install_requires =
    python-docx == 0.8.11
    matplotlib == 3.4.3
    jinja2 == 3.0.2

[options.entry_points]
console_scripts =
    sarif = sarif.cmdline.main:main

[options.packages.find]
where = src
